# army_news

./: .env.example  .gitignore  PRD.md  README.md  TODOLIST.md  pyproject.toml
.github/workflows/: army-morning-brief.yml
docs/: OPERATIONS.md
scripts/: inspect_workflow.py
src/army_morning_brief/: __main__.py  briefing.py  classification.py  cli.py  collector.py  config.py  models.py  pipeline.py  sources.py  telegram.py
tests/: test_briefing.py  test_classification.py  test_cli.py  test_collector.py  test_models.py  test_pipeline.py  test_telegram.py  test_workflow.py
tests/fixtures/: adversarial_feed.xml  daily_feed.xml
