[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "army-morning-brief"
version = "0.1.0"
description = "Deterministic daily public-news briefing for Republic of Korea Army readers"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "httpx>=0.27,<1",
]

[dependency-groups]
dev = [
  "basedpyright>=1.29,<2",
  "pytest>=8,<9",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/army_morning_brief"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]
